Add Home, NotFound, and Services pages with responsive design and FontAwesome icons
- Created Home page with hero section, key features, about section, services, fleet, and contact information.
- Implemented NotFound page for 404 errors with a link back to the home page.
- Developed Services page detailing port container services, flexible pickup & delivery, container types, service coverage, and a call to action.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ticket-management-system</title>
+    <meta name="description" content="Best Service Trucking LLC - Moving cargo with care and efficiency from the Port of Savannah and anywhere in Georgia to the Southeast and beyond. Safety. Reliability." />
+    <meta name="keywords" content="trucking, freight, port of savannah, georgia trucking, container hauling, logistics, southeast trucking" />
+    <title>Best Service Trucking LLC - Safety. Reliability.</title>
   </head>
   <body>
     <div id="root"></div>
