fix: add missing Google site verification meta tag in index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Best Service Trucking LLC - Moving cargo with care and efficiency from the Port of Savannah and anywhere in Georgia to the Southeast and beyond. Safety. Reliability." />
     <meta name="keywords" content="trucking, freight, port of savannah, georgia trucking, container hauling, logistics, southeast trucking" />
     <title>Best Service Trucking LLC - Safety. Reliability.</title>
+    <meta name="google-site-verification" content="Jer8KdyHt9JIaDgV8VomBM1rz9S9mAR2U_vosu8Hmok" />
   </head>
   <body>
     <div id="root"></div>
